User visible changes in Buildbot.             -*- outline -*-

*** Password Protection for Force Build and Stop actions

It is now possible to require authentication to force build and stop via the
WebStatus interface. To use this, set the 'auth' field of WebStatus to a valid
IAuth implementation, currently only BasicAuth with a list of user/passwords.
By default, the unauthenticated behavior will occur.

* Release 0.7.10 (25 Feb 2009)

This release is mainly a collection of user-submitted patches since
the last release.

** New Features

*** Environment variables in a builder (#100)

It is useful to be able to pass environment variables to all steps in a
builder.  This is now possible by adding { .. 'env': { 'var' : 'value' }, ... }
to the builder specification.

*** IRC status plugin improvements (#330, #357, #378, #280, #381, #411, #368)

*** usePTY specified in master.cfg, defaults to False (#158, #255)

Using a pty has some benefits in terms of supporting "Stop Build", but causes
numerous problems with simpler jobs which can be killed by a SIGHUP when their
standard input is closed.  With this change, PTYs are not used by default,
although you can enable them either on slaves (with the --usepty option to
create-slave) or on the master.

*** More information about buildslaves via the web plugin (#110)

A new page, rooted at /buildslave/$SLAVENAME, gives extensive information about
the buildslave.

*** More flexible merging of requests (#415)

The optional c['mergeRequests'] configuration parameter takes a function
which can decide whether two requests are mergeable.

*** Steps can be made to run even if the build has halted (#414)

Adding alwaysRun=True to a step will cause it to run even if some other step
has failed and has haltOnFailure=True.

*** Compress buildstep logfiles (#26)

Logs for each buildstep, which can take a lot of space on a busy buildmaster,
are automatically compressed after the step has finished.

*** Support for "latent" buildslaves
