@@ -1,4 +1,5 @@
 
+import os
 from zope.interface import Interface, implements
 
 class IAuth(Interface):
@@ -43,3 +44,40 @@ class BasicAuth(AuthBase):
                 return True
         self.err = "Invalid username or password"
         return False
+
+class HTPasswdAuth(AuthBase):
+    implements(IAuth)
+    """Implement authentication against an .htpasswd file."""
+
+    file = ""
+    """Path to the .htpasswd file to use."""
+
+    def __init__(self, file):
+        """C{file} is a path to an .htpasswd file."""
+        assert os.path.exists(file)
+        self.file = file
+
+    def authenticate(self, user, passwd):
+        """Authenticate C{user} and C{passwd} against an .htpasswd file"""
+        if not os.path.exists(self.file):
+            self.err = "No such file: " + self.file
+            return False
+        # Fetch each line from the .htpasswd file and split it into a
+        # [user, passwd] array.
+        lines = [l.rstrip().split(':', 1)
+                 for l in file(self.file).readlines()]
+        # Keep only the line for this login
+        lines = [l for l in lines if l[0] == user]
+        if not lines:
+            self.err = "Invalid user/passwd"
+            return False
+        # This is the DES-hash of the password. The first two characters are
+        # the salt used to introduce disorder in the DES algorithm.
+        hash = lines[0][1]
+        from crypt import crypt
+        res = hash == crypt(passwd, hash[0:2])
+        if res:
+            self.err = ""
+        else:
+            self.err = "Invalid user/passwd"
+        return res
