@@ -7361,12 +7361,18 @@ current builds, in that case you can pass an instance of
 @code{status.web.authentication.IAuth} as a @code{auth} keyword argument.
 The class @code{BasicAuth} implements a basic authentication mechanism
 using a list of user/password tuples provided from the configuration file.
+The class @code{HTPasswdAuth} implements an authentication against an
+@file{.htpasswd} file.
 
 @example
 from buildbot.status.html import WebStatus
 from buildbot.status.web.authentication import BasicAuth
 users = [('bob', 'secret-pass'), ('jill', 'super-pass')]
 c['status'].append(WebStatus(http_port=8080, auth=BasicAuth(users)))
+
+from buildbot.status.web.authentication import HTPasswdAuth
+file = '/path/to/file'
+c['status'].append(WebStatus(http_port=8080, auth=(HTPasswdAuth(file))))
 @end example
 
 
